Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<!DOCTYPE html>
+<!DOCTYPE html>https://github.com/nabeelkv/bestsellingsbooks/blob/main/index2.html
 <html lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
 <head>
 	<meta charset="UTF-8">
